Redesign search results page

--- a/templates/dashboard/search/results.html
+++ b/templates/dashboard/search/results.html
@@ -16,12 +16,14 @@
 {% endblock %}
 
 {% block menu_catalogue_class %} active{% endblock %}
+{% block body_class %}body-search-results{% endblock %}
 
 {% block content %}
   <div class="row">
-    <div class="col s12">
-      {% if products or orders or users %}
-        <ul class="collection list">
+    <div class="col s12 l9">
+      {% if products %}
+        <h6>Products</h6>
+        <ul class="collection list card">
           {% for product in products %}
             <li class="collection-item avatar list-item">
               <a href="{% url 'dashboard:product-detail' pk=product.pk %}">
@@ -39,6 +41,11 @@
               </a>
             </li>
           {% endfor %}
+        </ul>
+      {% endif %}
+      {% if orders %}
+        <h6>Orders</h6>
+        <ul class="collection list card">
           {% for order in orders %}
             <li class="collection-item avatar list-item">
               <a href="{% url 'dashboard:order-details' order_pk=order.pk %}">
@@ -61,8 +68,13 @@
                   </small>
                 </p>
               </a>
-            <li class="collection-item avatar list-item">
+            </li>
           {% endfor %}
+        </ul>
+      {% endif %}
+      {% if users %}
+        <h6>Users</h6>
+        <ul class="collection list card">
           {% for user in users %}
             <li class="collection-item avatar list-item">
               <a href="{% url 'dashboard:customer-details' pk=user.pk %}">
@@ -81,8 +93,8 @@
             </li>
           {% endfor %}
         </ul>
-        {% include "dashboard/includes/_pagination.html" with page_obj=results %}
-      {% elif query %}
+      {% endif %}
+      {% if not users and not orders and not products and query %}
         <div class="not-found">
           <p class="grey-text">
             {% blocktrans trimmed with full_name=result.get_full_name context "No Search result message" %}
